[package]
name = "net_loom_rs"
version = "0.1.0"
authors = ["Josh Madden <cyrex562@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.8"
user32-sys = "0.2"
kernel32-sys = "0.2.2"
shell32-sys = "0.1.2"
ws2_32-sys = "0.2.1"
libc = "0.2.65"
clap = "2.33.0"
num = "0.2.0"
num-traits = "0.2.10"
num-derive = "0.3.0"
yaml-rust = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
fern = "0.5"
chrono = "0.4.10"

